# hello_gtk

./: Cargo.toml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  windows-msys2.yml
src/: main.rs
src/audio/: format.rs  mod.rs  validator.rs
src/components/: about_dialog.rs  file_list.rs  header_bar.rs  main_window.rs  mod.rs
src/encoder/: gstreamer.rs  manager.rs  mod.rs
src/metadata/: album.rs  disc.rs  mod.rs  musicbrainz.rs  track.rs
src/models/: audio_file.rs
src/player/: mod.rs  player.rs
src/services/: audio_service.rs
src/ui/: mod.rs
src/utils/: mod.rs
